--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,15 @@
+html {
+    width: 90%;
+    margin: auto;
+}
+
+body {
+    background-color: ghostwhite;
+}
 header {
     border: 4px solid;
     height: 70px;
-    background-color: rgba(56, 97, 23, 0.39);
+    background-color: bisque;
 }
 ul {
     list-style: none;
@@ -10,8 +18,8 @@ ul {
 }
 
 li {
-    color: blue;
-    font-size: 24px;
+    color: Black;
+    font-size: 20px;
 }
 
 #time {
@@ -26,12 +34,25 @@ h1 {
     
 }
 
+h2 {
+    display: flex;
+    font-size: 40px;
+}
+
 p {
     display: flex;
     justify-content: center;
     font-size: 28px;
+    padding-inline: 100px;
 }
 
+button {
+    height: 48px;
+    width: auto;
+    font-size: 20px;
+    background-color: bisque;
+    color: Black;
+}
 main {
     display: flex;
     justify-content: center;
